# bouclier-bleu

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  README.md  SECURITY.md  config.toml  flake.nix  shell.nix
.github/workflows/: co-re.yml  format.yml
assets/: bouclier-bleu-pubkey.asc
bpf/: dump_restrict.bpf.c  exec_block.bpf.c  io_restrict.bpf.c  lsm_enforcer.bpf.c  madvise_ratelimit.bpf.c  mount_secure.bpf.c  ptrace_block.bpf.c  rename_entropy.bpf.c  shield.bpf.c  strict_wx.bpf.c  userns_restrict.bpf.c
bpf/headers/: bpf_fallbacks.h  module_core.h  vfs_helpers.h
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: actor.rs  bpf_manager.rs  config.rs  ipc.rs  main.rs  telemetry.rs
core/src/ipc/: handler.rs  mod.rs  setup.rs  types.rs
docs/: ARCHITECTURE.md  DEVELOPER.md  MODULES.md
modules/: Cargo.toml
modules/src/: dump_restrict.rs  exec_block.rs  io_restrict.rs  lib.rs  madvise_ratelimit.rs  mount_secure.rs  ptrace_block.rs  rename_entropy.rs  shield.rs  strict_wx.rs  userns_restrict.rs
scripts/: build_image.sh  co-re.sh  complexity.sh  format.sh  incus_shell.sh  install.sh  metrics.sh  release.sh
systemd/: bouclier-bleu.service
tests/benchmark/: io_restrict.rs  rename_entropy.rs  shield.rs  startup_memory.rs
tests/component/: dump_restrict.sh  exec_block.sh  exec_block_path.sh  io_restrict.sh  madvise_ratelimit.sh  mount_secure.sh  ptrace_block.sh  rename_entropy.sh  shield.sh  strict_wx.sh  systemd_service.sh  userns_restrict.sh
tests/integration/: cli_daemon_e2e.rs  (+3 more)
xtask/: Cargo.toml
(+11 files in other folders)
