[package]
name = "core"
version = "0.1.3"
edition = "2024"

[dependencies]
libbpf-rs = "0.23"
rustix = { version = "0.38", features = ["net", "fs", "process"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

modules = { path = "../modules" }

[build-dependencies]
libbpf-cargo = "0.23"
quote = "1.0"
proc-macro2 = "1.0"
