[package]
name = "core"
version = "0.6.0"
edition = "2024"

[dependencies]
libbpf-rs = "0.26"
rustix = { version = "1.1", features = ["net", "fs", "process"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

modules = { path = "../modules" }

[build-dependencies]
libbpf-cargo = "0.26"
quote = "1.0"
proc-macro2 = "1.0"
